fixed actionbar overflow issue with asana card

--- a/workflows/asana-card/app/styles/_tasks.scss
+++ b/workflows/asana-card/app/styles/_tasks.scss
@@ -274,7 +274,7 @@
   //z-index: 10;
   bottom: 0;
   left: 0;
-  //z-index: 1000;
+  z-index: 9;
   //overflow: hidden;
 
   &.active {
